# Tarzen

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md
.antigravity/: instructions.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  dev_server.py  pyproject.toml
backend/scripts/: export_openapi.py
backend/src/carbon/: __init__.py  main.py
backend/src/carbon/adapters/: __init__.py  bigquery.py  firestore.py  gemini.py  leaderboard_store.py  maps.py  profile_store.py  progress_store.py  pubsub.py  region.py  savings_store.py  vision.py
backend/src/carbon/api/: __init__.py  auth.py  container.py  errors.py  health.py  logging_middleware.py  rate_limit.py  routes.py  savings.py  security_headers.py  social.py
backend/src/carbon/application/: __init__.py  boards.py  gamification.py  insights.py  leaderboard.py  live_scoring.py
backend/src/carbon/core/: __init__.py  config.py  logging.py
backend/src/carbon/data/: emission_factors.json
backend/src/carbon/domain/: __init__.py  benchmarks.py  errors.py  factors.py  models.py  ports.py  registry.py  savings.py  transport.py
backend/src/carbon/domain/trackers/: __init__.py  energy.py  food.py  scalar.py  shopping.py  waste.py
backend/src/carbon/functions/: __init__.py  aggregate_consumer.py
backend/src/carbon/models/: __init__.py  insight.py  schemas.py
backend/tests/unit/: conftest.py  test_aggregate_consumer.py  test_auth.py  test_benchmarks.py  test_config.py  test_energy_tracker.py  test_food_tracker.py  test_gamification.py  test_health.py  test_insights.py  test_leaderboard.py  test_live_scoring.py  test_main.py  test_maps.py  test_profile_store.py  test_progress_store.py  test_rate_limit.py  test_region.py  test_routes.py  test_savings_domain.py  test_savings_routes.py  test_savings_store.py  test_schemas.py  test_security_headers.py  test_shopping_tracker.py  test_social_routes.py  test_transport_tracker.py  test_vision.py  test_waste_tracker.py
docs/: ai-tool-usage.md  architecture.md  data-governance.md  data-sources.md  evaluation-mapping.md  openapi.json  phases.md  threat-model.md
frontend/: .env.example  (+9 more)
(+102 files in other folders)
