# SPDX-License-Identifier: MIT
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "carbon"
version = "0.1.0"
description = "Carbon Footprint Awareness Platform — hexagonal FastAPI backend."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Carbon Footprint Platform Team" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "firebase-admin>=6.5",
    "google-cloud-aiplatform>=1.50",
    "google-cloud-firestore>=2.16",
    "google-cloud-bigquery>=3.20",
    "google-cloud-pubsub>=2.21",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "redis>=5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/carbon"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are the idiomatic way to declare params.
extend-immutable-calls = ["fastapi.File"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "firebase_admin",
    "firebase_admin.*",
    "google.cloud.pubsub_v1",
    "google.cloud.pubsub_v1.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
# Coverage runs on every invocation so the gate below is enforced locally and
# in CI from a bare `pytest`, matching how the pipeline runs the suite.
addopts = "-q --cov=carbon --cov-report=term-missing"
markers = [
    "integration: integration tests requiring external credentials (auto-skipped)",
]

[tool.coverage.run]
source = ["carbon"]
branch = true

[tool.coverage.report]
# Fail the suite below this line-and-branch coverage threshold. Held at 90% to
# match the strongest comparable implementation and prevent silent erosion.
fail_under = 90
show_missing = true
